# carbon-dating

./: .gitignore  README.md  db_name  manage.py  pyproject.toml
Messages/: models.py
authentication/: forms.py  urls.py  views.py
author/: admin.py  forms.py  models.py  views.py
author/migrations/: 0001_initial.py  0002_auto_20210407_1810.py  0002_auto_20210412_2310.py  0003_auto_20210407_1816.py  0003_auto_20210412_2318.py  0004_auto_20210407_1821.py
carbon_dating/: asgi.py  settings.py  urls.py  wsgi.py
comment/: admin.py  models.py  urls.py  views.py
comment/migrations/: 0001_initial.py  0002_auto_20210415_1403.py  0003_alter_comment_post.py
direct_messages/: admin.py  models.py  urls.py  views.py
direct_messages/migrations/: 0001_initial.py  0002_rename_messages_message.py  0003_auto_20210409_1824.py
direct_messages/templatetags/: filters.py
new_admirers/: admin.py  apps.py  models.py
new_admirers/migrations/: 0001_initial.py
post/: forms.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_auto_20210412_1425.py
static/css/: chatbox.css  explore.css  home.css  login.css  messages.css  navbar.css  post_detail.css  post_form.css  profile.css
templates/: 404.html  500.html  author_detail.html  base.html  change_password.html  explore.html  generic_form.html  home.html  navbar.html  post_detail.html  update_profile.html
templates/comments/: add_comment.html
templates/messages/: direct_messages.html  messages_preview.html
templates/post/: delete_post.html  post_detail.html  post_form.html
(+2 files in other folders)
