[tool.poetry]
name = "carbon-dating"
version = "0.1.0"
description = ""
authors = ["Jason <jarnewma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-select-multiple-field = "^0.4.2"
django-multiselectfield = "^0.1.12"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
